# locus

./: .claudeallow  .claudeignore  .dev_notes.md  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEEPDIVE_PROMTING.md  Makefile  README.md  README.ru.md  TESTS.md  main.py  pyproject.toml  to_fix.md
.locus/: ignore
.miloc/: changelog.md  debug-notes.miloc.md  global-notes.miloc.md  goal.md  roadmap.md
.miloc/docs/: ARCHITECTURE.md  ASSEMBLY.md  README.md  SYSTEM_DESIGN.md  TESTS.md
.tasks/done/T0001-2026-03-14-llm-export-review-plan/: brief.md  delivered.md  epic.md  request.md
.tasks/done/T0001-2026-03-14-llm-export-review-plan/artifacts/: owners.md  plan.md  qa.md
.tasks/done/T0001-2026-03-14-llm-export-review-plan/artifacts/agents/: analyst.md  repo_scout.md  verify_scout.md
.tasks/done/T0002-2026-03-14-llm-export-implementation/: brief.md  delivered.md  epic.md
.tasks/done/T0002-2026-03-14-llm-export-implementation/artifacts/: plan.md  qa.md
.tasks/done/T0002-2026-03-14-llm-export-implementation/artifacts/agents/: contracts.md  dev_impl.md
.tasks/planned/T0002-2026-03-14-llm-export-implementation/: epic.md
.tasks/planned/T0002-2026-03-14-llm-export-implementation/artifacts/: plan.md
src/: .locusignore
src/.locus/: allow
src/locus/: __init__.py  __main__.py  models.py
src/locus/cli/: args.py  main.py  mcp_cmd.py
src/locus/core/: config.py  modular_export.py  orchestrator.py  processor.py  resolver.py  scanner.py
src/locus/formatting/: code.py  colors.py  data_preview.py  helpers.py  report.py  tree.py
src/locus/init/: __init__.py  creator.py  templates.py
src/locus/init/templates/: AGENTS.template.md  ARCHITECTURE.template.md  ARCHITECTURE_GEMENI.md  CLAUDE.md.template  DEEPDIVE_PROMTING.template.md  DEVELOPER.md  README.template.md  SESSION.md.template  TESTS.md.template  TODO.md.template  mcp.template.json
src/locus/mcp/: __init__.py  launcher.py
src/locus/mcp/components/: __init__.py
src/locus/mcp/components/embedding/: __init__.py  embedding_component.py
src/locus/mcp/components/ingest/: __init__.py  chunking.py  code_ingest_component.py
src/locus/mcp/components/vector_store/: __init__.py  lancedb_store.py
src/locus/mcp/di/: __init__.py  container.py
src/locus/mcp/server/: __init__.py  mcp_app.py
src/locus/mcp/server/tools/: get_file_context.py  index_control.py  search_codebase.py
src/locus/mcp/settings/: __init__.py  settings-local.yaml  settings.py  settings.yaml
src/locus/search/: __init__.py  engine.py  interfaces.py
src/locus/similarity/: AGENTS.md  README.md  __init__.py  ast_canonical.py  extractor.py  formatting.py  normalize.py  search.py  strategies.py  types.py
src/locus/updater/: parser.py  writer.py
src/locus/utils/: config.py  file_cache.py  helpers.py
src/project_analyzer/: __init__.py  __main__.py  models.py
src/project_analyzer/cli/: args.py  main.py
src/project_analyzer/core/: orchestrator.py  processor.py  resolver.py  scanner.py
src/project_analyzer/formatting/: code.py  data_preview.py  helpers.py  report.py  tree.py
src/project_analyzer/updater/: models.py  parser.py  writer.py
src/project_analyzer/utils/: config.py  file_cache.py  helpers.py
tasks/: session-01.md  similarity-plan.md  similarity-research.md
tests/: conftest.py  test_cli.py  test_core.py  test_formatting.py  test_init.py  test_similarity.py  test_updater.py  test_utils.py
tests/benchmarks/: README.md  run_benchmarks.py
tests/benchmarks/cases/case-001/: b.py  meta.yaml
tests/benchmarks/cases/case-002/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-003/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-004/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-005/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-006/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-007/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-008/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-009/: b.py  meta.yaml
tests/benchmarks/cases/case-010/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-011/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-012/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-013/: b.py  meta.yaml
tests/benchmarks/cases/case-014/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-015/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-016/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-017/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-018/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-019/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-020/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-021/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-022/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-023/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-024/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-025/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-026/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-027/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-028/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-029/: a.py  b.py  meta.yaml
tests/benchmarks/cases/case-030/: a.py  b.py  meta.yaml
tests/dummy_similarity/: README.md  exact_a.py  exact_b.py  near_same_ast.py  small_diff.py  whitespace_variant.py
tests/mcp/: conftest.py  test_chunking.py  test_container.py  test_embedding.py  test_ingest.py  test_launcher.py  test_server_tools.py  test_vector_store.py
tests/mcp/integration/: test_mcp_integration.py
