[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "locus-analyzer"
version = "0.2.0"
description = "Analyze project structure and optionally update files from Markdown."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich",
    "pyyaml", # For benchmark runner
]

[project.optional-dependencies]
# Define the 'mcp' extra that includes all heavy dependencies
mcp = [
    "sentence-transformers>=2.2.0",
    "huggingface-hub>=0.17.0",
    "torch",
    "transformers",
    "lancedb>=0.6.0",
    "watchdog>=3.0.0",
    "fastmcp>=0.2.0",
    "pydantic",
    "pydantic-settings",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "locus-analyzer[mcp]", # Dev environment should include all extras
]

[project.scripts]
locus = "locus.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
